# mp-wechat-skills

./: .gitignore  README.md  SKILL.md  pyproject.toml  skills.json  test_article.md  测试文章-Claude代码助手.md  测试渐变标题.md
.claude/: settings.local.json
.claude-plugin/: marketplace.json  plugin.json
.claude/skills/mp-weixin-skills/: SKILL.md  skills.json
.claude/skills/mp-weixin-skills/references/: cover-guide.md
docs/plans/: 2025-01-29-implementation-plan.md  2025-01-29-wechat-publisher-design.md
examples/: sample.md
plugins/mp-weixin-skills/: .env.example  SKILL.md  plugin.json  pyproject.toml
plugins/mp-weixin-skills/references/: image-upload.md  style-specs.md
plugins/mp-weixin-skills/scripts/parsers/: __init__.py  markdown.py  word.py
plugins/mp-weixin-skills/scripts/wechat/: api_client.py
plugins/mp-weixin-skills/tests/: test_exceptions.py  test_html_builder.py  test_logger.py  test_template_maker.py
references/: conversion-rules.md  cover-guide.md  platform-guide.md  workflows.md
scripts/: cli.py
scripts/converters/: style_manager.py
scripts/parsers/: pdf.py
scripts/utils/: __init__.py  image_extractor.py  image_processor.py  logger.py
src/: cli.py
src/converters/: __init__.py  style_manager.py
src/covers/: template_maker.py
src/parsers/: __init__.py  base.py  markdown.py  word.py
src/utils/: __init__.py  logger.py
src/wechat/: api_client.py
tests/: test_api_client.py  test_exceptions.py  test_html_builder.py  test_integration.py  test_logger.py  test_markdown_parser.py  test_template_maker.py
(+16 files in other folders)
